--- a/resources/scss/component/_fonts.scss
+++ b/resources/scss/component/_fonts.scss
@@ -1,14 +1,11 @@
-@font-face {
-  font-family: 'GmarketSansMedium';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
+/* 한글에만 Pretendard 적용 */
 @font-face {
   font-family: 'Pretendard';
-  src: url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css')
-    format('woff');
-  font-weight: normal;
+  src: url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/woff2/Pretendard-Regular.woff2')
+      format('woff2'),
+    url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/woff/Pretendard-Regular.woff')
+      format('woff');
+  font-weight: 400;
   font-style: normal;
+  unicode-range: U+AC00-D7AF; /* 한글 유니코드 범위 */
 }
