--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -48,8 +48,9 @@
 
 // header
 #header {
+  position: relative;
+  background-color: lavenderblush;
   z-index: 1000;
-
   .inner {
     display: flex;
     justify-content: space-between;
@@ -60,10 +61,107 @@
       height: 80px;
     }
   }
+  #logo {
+    a {
+      display: block;
+      width: 123px;
+      height: 26px;
+      background: url(../../../resources/images/pattern/common/kiafseoul_header_logo.png) no-repeat 0 0 / contain;
+    }
+  }
+  .util {
+    display: flex;
+    gap: 20px;
+    @include mobileMore {
+      gap: 30px;
+    }
+
+    .lang,
+    .all-menu {
+      width: 24px;
+      height: 24px;
+      svg {
+        stroke: $gray-90;
+      }
+    }
+  }
+}
+#nav-all {
+  &.active {
+    display: block;
+    left: 0;
+  }
+  position: fixed;
+  top: 0;
+  left: 100%;
+  padding: 0 20px;
+  width: 100%;
+  height: 100%;
+
+  background-color: $white;
+  transition: all 0.3s;
+  .nav-all__tit {
+    //height: 72px;
+    font-size: 3.2rem;
+    font-weight: 400;
+    padding: 12px 0;
+  }
+  .gnb {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 30px;
+    a {
+      display: block;
+      font-size: 3rem;
+      font-weight: 600;
+    }
+  }
+  .btn-close {
+    position: absolute;
+    top: 23px;
+    right: 20px;
+  }
 }
 
 .intro {
-  height: 100vh;
+  height: 85vh;
+  .inner {
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    @include tabletMore {
+      flex-direction: row;
+    }
+  }
+  &__txt {
+    padding: 36px 0;
+    font-size: 4.8rem;
+    letter-spacing: -1.6px;
+    font-weight: 500;
+    @include mobileMore {
+      font-size: 7rem;
+    }
+    @include tabletMore {
+      font-size: 8rem;
+    }
+  }
+  &__vid {
+    background-color: #eee;
+    //width: 100%;
+    height: 100%;
+    align-items: stretch;
+    border-radius: 10px;
+    @include tablet {
+      border-radius: 20px;
+    }
+    @include tabletMore {
+      height: 100%;
+      width: 50%;
+      border-radius: 40px;
+    }
+  }
 }
 
 .sec-slide {
@@ -113,6 +211,7 @@
     }
     .title {
       font-size: 3rem;
+
       @include mobileMore {
         font-size: 3.6rem;
       }
@@ -194,7 +293,7 @@
   .icon-box {
     width: 46px;
     height: 46px;
-    background: url(../../../resources/images/pattern/common/contact.svg) no-repeat 0 0 / contain;
+    background: url(../../../resources/images/pattern/common/icon_contact.svg) no-repeat 0 0 / contain;
     @include tabletMore {
       width: 64px;
       height: 64px;
@@ -208,8 +307,7 @@
     }
   }
   margin-top: 24px;
-  // height: 50vh;
-  // background-color: lightblue;
+
   &__list {
     display: flex;
     flex-wrap: wrap;
@@ -252,7 +350,7 @@
           align-items: center;
           .title {
             text-transform: capitalize;
-            font-weight: 400;
+            //font-weight: 400;
             @include tabletMore {
               font-size: 2.6rem;
             }
@@ -276,4 +374,175 @@
       }
     }
   }
+}
+
+// grid-flex layout
+.sec-card {
+  margin: 20px 0;
+  .card__item {
+    background-color: lightcoral;
+    border-radius: 12px;
+    @include mobileMore {
+      border-radius: 16px;
+    }
+    @include tabletMore {
+      border-radius: 24px;
+    }
+  }
+  .card__area {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    .wrapper-link {
+      // grid-column: 2 / 3;
+      // grid-row: 2 / 3;
+      display: grid;
+      gap: 12px;
+      grid-template-columns: 1fr 1fr;
+
+      .map {
+        grid-area: 1 / 1 / 3 / 2;
+      }
+      // .kiafrieze {
+      //   grid-area: 1 / 2 / 2 / 3;
+      // }
+      // .membership {
+      //   grid-area: 2 / 2 / 3 / 3;
+      // }
+    }
+    .wrapper-insight {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    .wrapper-acco {
+      // grid-column: 1 / 3;
+      // grid-row: 4 / 5;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+      .acco01 {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+      }
+    }
+    .wrapper-goto {
+      display: flex;
+      justify-content: space-between;
+      gap: 12px;
+      .card__item {
+        .icon-box {
+          display: none;
+        }
+
+        flex: 1;
+        height: 120px;
+        padding: 16px;
+        .title {
+          font-size: 16px;
+          font-weight: 400;
+        }
+      }
+    }
+    @include mobileMore {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 170px 170px 352px 352px 72px;
+      gap: 12px;
+      .since {
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+      }
+      .new {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+      .wrapper-insight {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+        // display: grid;
+        // gap: 12px;
+        // grid-template-columns: 0.8fr 1.2fr;
+        flex-direction: row;
+        justify-content: space-between;
+        .livetalk {
+          flex: 1;
+        }
+        .article {
+          flex: 2;
+        }
+      }
+      .wrapper-acco {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        .acco01 {
+          grid-column: 1 / 2;
+          grid-row: 1 / 3;
+        }
+      }
+      .wrapper-goto {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+      }
+    }
+    @include tabletMore {
+      grid-template-columns: 1fr 1.2fr 0.8fr 1fr;
+      grid-template-rows: 300px 480px 140px;
+      gap: 20px;
+      .since {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+      }
+      .wrapper-link {
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+        //display: grid;
+        grid-template-columns: 0.8fr 1fr;
+        gap: 20px;
+      }
+      .wrapper-insight {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        display: grid;
+        grid-template-columns: 1fr 1.2fr 0.8fr;
+        gap: 20px;
+        .livetalk {
+          grid-column: 1 / 2;
+          grid-row: 1 / 3;
+        }
+        .article {
+          grid-column: 2 / 4;
+          grid-row: 1 / 3;
+        }
+      }
+      .wrapper-acco {
+        background-color: #eee;
+        height: 640px;
+        grid-column: 4 / 5;
+        grid-row: 2 / 4;
+        display: block;
+      }
+      .wrapper-goto {
+        grid-column: 1 / 4;
+        grid-row: 3 / 4;
+      }
+    }
+  } //card__area
+}
+
+.btn-goto::after {
+  content: '\f061';
+  font-family: 'Line Awesome Free';
+  font-weight: 900;
+  color: $white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  transform: rotate(-45deg);
+  width: 24px;
+  height: 24px;
+  background-color: $gray-90;
+  border-radius: 50%;
 }
