--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 /* 한글에만 Pretendard 적용 */
 @font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/woff2/Pretendard-Regular.woff2") format("woff2"), url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/woff/Pretendard-Regular.woff") format("woff");
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
-  unicode-range: U+AC00-D7AF; /* 한글 유니코드 범위 */
+  unicode-range: U+AC00-D7AF;
 }
 /* reset */
 body,
@@ -411,10 +411,10 @@ legend {
 }
 
 .intro {
-  height: 85vh;
+  height: 90vh;
 }
 .intro .inner {
-  height: 85vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -481,7 +481,6 @@ legend {
   }
 }
 .sec-slide .sec-slide__tit {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -695,7 +694,7 @@ legend {
   margin: 20px 0;
 }
 .sec-card .card__item {
-  background-color: lightcoral;
+  background-color: #eee;
   border-radius: 12px;
 }
 @media (min-width: 600px) {
@@ -713,23 +712,74 @@ legend {
   flex-direction: column;
   gap: 12px;
 }
+.sec-card .card__area .since a {
+  height: 170px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.sec-card .card__area .since a .txt-box {
+  display: flex;
+  justify-content: space-between;
+}
+.sec-card .card__area .news {
+  background: url(https://www.theartro.kr/kor/focus/20221005/1_3.jpg) no-repeat center/cover;
+}
+.sec-card .card__area .news a {
+  color: #fff;
+  padding: 16px;
+  height: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .sec-card .card__area .wrapper-link {
   display: grid;
-  gap: 12px;
+  gap: 12px 7px;
   grid-template-columns: 1fr 1fr;
 }
 .sec-card .card__area .wrapper-link .map {
   grid-area: 1/1/3/2;
 }
-.sec-card .card__area .wrapper-insight {
+.sec-card .card__area .wrapper-link .card__item {
+  padding: 16px;
+}
+.sec-card .card__area .wrapper-link .card__item .txt-box {
   display: flex;
-  flex-direction: column;
-  gap: 12px;
+  justify-content: space-between;
+}
+.sec-card .card__area .livetalk a {
+  height: 106px;
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+.sec-card .card__area .livetalk a .btn-goto {
+  margin-top: auto;
+}
+.sec-card .card__area .article a {
+  padding: 16px;
+  height: 172px;
+  display: flex;
+  justify-content: space-between;
+}
+.sec-card .card__area .article a .btn-goto {
+  margin-top: auto;
 }
 .sec-card .card__area .wrapper-acco {
+  height: 356px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 12px;
+  grid-template-rows: 1fr 1fr;
+  gap: 12px 7px;
+}
+.sec-card .card__area .wrapper-acco .card__item a {
+  padding: 16px;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 .sec-card .card__area .wrapper-acco .acco01 {
   grid-column: 1/3;
@@ -738,7 +788,7 @@ legend {
 .sec-card .card__area .wrapper-goto {
   display: flex;
   justify-content: space-between;
-  gap: 12px;
+  gap: 7px;
 }
 .sec-card .card__area .wrapper-goto .card__item {
   flex: 1;
@@ -748,39 +798,49 @@ legend {
 .sec-card .card__area .wrapper-goto .card__item .icon-box {
   display: none;
 }
-.sec-card .card__area .wrapper-goto .card__item .title {
-  font-size: 16px;
+.sec-card .card__area .wrapper-goto .card__item .txt-box {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.sec-card .card__area .wrapper-goto .card__item .txt-box .title {
+  font-size: 1.6rem;
   font-weight: 400;
+}
+.sec-card .card__area .wrapper-goto .card__item .txt-box .btn-goto {
+  margin-top: auto;
 }
 @media (min-width: 600px) {
   .sec-card .card__area {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.8fr 0.2fr 1fr;
     grid-template-rows: 170px 170px 352px 352px 72px;
     gap: 12px;
   }
+  .sec-card .card__area .card__item {
+    height: 100%;
+  }
+  .sec-card .card__area .card__item a {
+    height: 100%;
+  }
   .sec-card .card__area .since {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1/3;
   }
-  .sec-card .card__area .new {
-    grid-column: 2/3;
+  .sec-card .card__area .news {
+    grid-column: 3/4;
     grid-row: 1/2;
   }
-  .sec-card .card__area .wrapper-insight {
-    grid-column: 1/3;
+  .sec-card .card__area .livetalk {
+    grid-column: 1/2;
     grid-row: 3/4;
-    flex-direction: row;
-    justify-content: space-between;
   }
-  .sec-card .card__area .wrapper-insight .livetalk {
-    flex: 1;
-  }
-  .sec-card .card__area .wrapper-insight .article {
-    flex: 2;
+  .sec-card .card__area .article {
+    grid-column: 2/4;
+    grid-row: 3/4;
   }
   .sec-card .card__area .wrapper-acco {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 4/5;
   }
   .sec-card .card__area .wrapper-acco .acco01 {
@@ -788,18 +848,25 @@ legend {
     grid-row: 1/3;
   }
   .sec-card .card__area .wrapper-goto {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 5/6;
+  }
+  .sec-card .card__area .wrapper-goto > .card__item {
+    height: auto;
   }
 }
 @media (min-width: 1024px) {
   .sec-card .card__area {
     grid-template-columns: 1fr 1.2fr 0.8fr 1fr;
-    grid-template-rows: 300px 480px 140px;
+    grid-template-rows: 300px 440px 140px;
     gap: 20px;
   }
   .sec-card .card__area .since {
     grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .sec-card .card__area .news {
+    grid-column: 2/3;
     grid-row: 1/2;
   }
   .sec-card .card__area .wrapper-link {
@@ -808,27 +875,24 @@ legend {
     grid-template-columns: 0.8fr 1fr;
     gap: 20px;
   }
-  .sec-card .card__area .wrapper-insight {
-    grid-column: 1/4;
-    grid-row: 2/3;
-    display: grid;
-    grid-template-columns: 1fr 1.2fr 0.8fr;
-    gap: 20px;
-  }
-  .sec-card .card__area .wrapper-insight .livetalk {
+  .sec-card .card__area .livetalk {
     grid-column: 1/2;
-    grid-row: 1/3;
+    grid-row: 2/3;
   }
-  .sec-card .card__area .wrapper-insight .article {
+  .sec-card .card__area .article {
     grid-column: 2/4;
-    grid-row: 1/3;
+    grid-row: 2/3;
   }
   .sec-card .card__area .wrapper-acco {
     background-color: #eee;
-    height: 640px;
+    height: 600px;
     grid-column: 4/5;
     grid-row: 2/4;
     display: block;
+  }
+  .sec-card .card__area .wrapper-acco .acco02,
+  .sec-card .card__area .wrapper-acco .acco03 {
+    display: none;
   }
   .sec-card .card__area .wrapper-goto {
     grid-column: 1/4;
@@ -942,21 +1006,29 @@ legend {
 
 .slide-studio {
   overflow: visible;
-  width: 80%;
+  width: 100%;
   margin-left: 0;
-}
-@media (min-width: 600px) {
-  .slide-studio {
-    width: 90%;
-  }
-}
-@media (min-width: 1024px) {
-  .slide-studio {
-    width: 90%;
-  }
 }
 .slide-studio .swiper-pagination {
   bottom: -50px;
+}
+
+.sec-slide__tit {
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .sec-slide__tit {
+    width: 320px;
+  }
+}
+
+.sec-slide__cont {
+  overflow: visible;
+}
+@media (min-width: 1024px) {
+  .sec-slide__cont {
+    overflow: hidden;
+  }
 }
 
 @media (max-width: 599px) {
