--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -125,9 +125,9 @@
 }
 
 .intro {
-  height: 85vh;
+  height: 90vh;
   .inner {
-    height: 85vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -187,7 +187,7 @@
   }
 
   .sec-slide__tit {
-    width: 100%;
+    //width: 320px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -380,7 +380,7 @@
 .sec-card {
   margin: 20px 0;
   .card__item {
-    background-color: lightcoral;
+    background-color: #eee;
     border-radius: 12px;
     @include mobileMore {
       border-radius: 16px;
@@ -392,89 +392,159 @@
   .card__area {
     display: flex;
     flex-direction: column;
+
     gap: 12px;
+    // grid-template-rows: 140px 140px 124px 106px 172px 356px 120px;
+
+    .since {
+      a {
+        height: 170px;
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .txt-box {
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+    }
+
+    .news {
+      background: url(https://www.theartro.kr/kor/focus/20221005/1_3.jpg) no-repeat center / cover;
+      a {
+        color: #fff;
+        padding: 16px;
+        height: 170px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+    }
+
+    // display: flex;
+    // flex-direction: column;
+    // gap: 12px;
 
     .wrapper-link {
       // grid-column: 2 / 3;
       // grid-row: 2 / 3;
       display: grid;
-      gap: 12px;
+      gap: 12px 7px;
       grid-template-columns: 1fr 1fr;
 
       .map {
         grid-area: 1 / 1 / 3 / 2;
       }
-      // .kiafrieze {
-      //   grid-area: 1 / 2 / 2 / 3;
-      // }
-      // .membership {
-      //   grid-area: 2 / 2 / 3 / 3;
-      // }
+      .card__item {
+        padding: 16px;
+        .txt-box {
+          display: flex;
+          justify-content: space-between;
+        }
+      }
     }
-    .wrapper-insight {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
+
+    .livetalk {
+      a {
+        height: 106px;
+        padding: 16px;
+        display: flex;
+        justify-content: space-between;
+        .btn-goto {
+          margin-top: auto;
+        }
+      }
     }
+
+    .article {
+      a {
+        padding: 16px;
+        height: 172px;
+        display: flex;
+        justify-content: space-between;
+        .btn-goto {
+          margin-top: auto;
+        }
+      }
+    }
+
     .wrapper-acco {
-      // grid-column: 1 / 3;
-      // grid-row: 4 / 5;
+      height: 356px;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 12px;
+      grid-template-rows: 1fr 1fr;
+      gap: 12px 7px;
+      .card__item {
+        a {
+          padding: 16px;
+          height: 100%;
+          display: flex;
+          align-items: flex-end;
+          justify-content: space-between;
+        }
+      }
       .acco01 {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
       }
     }
+
     .wrapper-goto {
       display: flex;
       justify-content: space-between;
-      gap: 12px;
+      gap: 7px;
       .card__item {
         .icon-box {
           display: none;
         }
-
         flex: 1;
         height: 120px;
         padding: 16px;
-        .title {
-          font-size: 16px;
-          font-weight: 400;
+        .txt-box {
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          .title {
+            font-size: 1.6rem;
+            font-weight: 400;
+          }
+          .btn-goto {
+            margin-top: auto;
+          }
         }
       }
     }
     @include mobileMore {
+      .card__item {
+        height: 100%;
+        a {
+          height: 100%;
+        }
+      }
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 0.8fr 0.2fr 1fr;
       grid-template-rows: 170px 170px 352px 352px 72px;
       gap: 12px;
       .since {
-        grid-column: 1 / 2;
+        grid-column: 1 / 3;
         grid-row: 1 / 3;
       }
-      .new {
-        grid-column: 2 / 3;
+      .news {
+        grid-column: 3 / 4;
         grid-row: 1 / 2;
       }
-      .wrapper-insight {
-        grid-column: 1 / 3;
+
+      .livetalk {
+        grid-column: 1 / 2;
         grid-row: 3 / 4;
-        // display: grid;
-        // gap: 12px;
-        // grid-template-columns: 0.8fr 1.2fr;
-        flex-direction: row;
-        justify-content: space-between;
-        .livetalk {
-          flex: 1;
-        }
-        .article {
-          flex: 2;
-        }
+      }
+      .article {
+        grid-column: 2 / 4;
+        grid-row: 3 / 4;
       }
       .wrapper-acco {
-        grid-column: 1 / 3;
+        grid-column: 1 / 4;
         grid-row: 4 / 5;
         .acco01 {
           grid-column: 1 / 2;
@@ -482,16 +552,23 @@
         }
       }
       .wrapper-goto {
-        grid-column: 1 / 3;
+        grid-column: 1 / 4;
         grid-row: 5 / 6;
+        > .card__item {
+          height: auto;
+        }
       }
     }
     @include tabletMore {
       grid-template-columns: 1fr 1.2fr 0.8fr 1fr;
-      grid-template-rows: 300px 480px 140px;
+      grid-template-rows: 300px 440px 140px;
       gap: 20px;
       .since {
         grid-column: 1 / 2;
+        grid-row: 1 / 2;
+      }
+      .news {
+        grid-column: 2 / 3;
         grid-row: 1 / 2;
       }
       .wrapper-link {
@@ -501,27 +578,24 @@
         grid-template-columns: 0.8fr 1fr;
         gap: 20px;
       }
-      .wrapper-insight {
-        grid-column: 1 / 4;
+      .livetalk {
+        grid-column: 1 / 2;
         grid-row: 2 / 3;
-        display: grid;
-        grid-template-columns: 1fr 1.2fr 0.8fr;
-        gap: 20px;
-        .livetalk {
-          grid-column: 1 / 2;
-          grid-row: 1 / 3;
-        }
-        .article {
-          grid-column: 2 / 4;
-          grid-row: 1 / 3;
-        }
+      }
+      .article {
+        grid-column: 2 / 4;
+        grid-row: 2 / 3;
       }
       .wrapper-acco {
         background-color: #eee;
-        height: 640px;
+        height: 600px;
         grid-column: 4 / 5;
         grid-row: 2 / 4;
         display: block;
+        .acco02,
+        .acco03 {
+          display: none;
+        }
       }
       .wrapper-goto {
         grid-column: 1 / 4;
