--- a/resources/scss/component/_reset.scss
+++ b/resources/scss/component/_reset.scss
@@ -131,6 +131,7 @@ html {
   font-size: $font-size-root;
 }
 body {
+  overflow-x: hidden;
   font-size: $font-size-base;
   line-height: $line-height-base;
   font-family: $font-family-base;
