--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -552,8 +552,7 @@
           border-radius: 12px;
           flex: 3;
           //height: 70%;
-          background: url(../../../resources/images/pattern/common/458746643_18434769607068520_9219641459782683301_n.jpg)
-            no-repeat center / cover;
+          background: url(../../../resources/images/pattern/common/sec-card_news.jpg) no-repeat center / cover;
           .btn-more::after {
             position: absolute;
             bottom: 16px;
@@ -600,8 +599,7 @@
       .map {
         grid-area: 1 / 1 / 3 / 2;
         .card__link {
-          background: url(../../../resources/images/pattern/common/스크린샷\ 2024-10-29\ 오후\ 2.13.19.png)
-            no-repeat center / cover;
+          background: url(../../../resources/images/pattern/common/sec-card_map.png) no-repeat center / cover;
         }
       }
       .magazine {
@@ -652,8 +650,7 @@
           border-radius: 100px;
           width: 85%;
           height: 100%;
-          background: url(../../images/pattern/common/스크린샷\ 2024-11-01\ 오전\ 9.49.24.png) no-repeat top
-            center / cover;
+          background: url(../../../resources/images/pattern/common/sec-card_livetalk.png) no-repeat top center / cover;
         }
         .btn-text {
           position: absolute;
@@ -700,8 +697,7 @@
           border-radius: 100px;
           width: 85%;
           height: 100%;
-          background: url(../../images/pattern/common/imran-perretta-riot-three-acts-2024-install.jpg) no-repeat center /
-            cover;
+          background: url(../../../resources/images/pattern/common/sec-card_article.jpg) no-repeat center / cover;
         }
         .btn-text {
           position: absolute;
@@ -771,8 +767,7 @@
           grid-row: 1 / 2;
           .card__link {
             position: relative;
-            background: url(../../../resources/images/pattern/common/스크린샷\ 2024-11-01\ 오전\ 11.54.36.png)
-              no-repeat top center / cover;
+            background: url(../../../resources/images/pattern/common/sec-card_archive.png) no-repeat top center / cover;
             &::after {
               content: '';
               display: block;
@@ -803,7 +798,7 @@
         .archive-2 {
           .card__link {
             position: relative;
-            background: url(../../../resources/images/pattern/common/sec-card_archive02.jpg) no-repeat center / cover;
+            background: url(../../../resources/images/pattern/common/sec-card_gallery.jpg) no-repeat center / cover;
             &::after {
               content: '';
               display: block;
@@ -830,7 +825,7 @@
         .archive-3 {
           position: relative;
           .card__link {
-            background: url(../../../resources/images/pattern/common/sec-card_archive03.jpg) no-repeat center / cover;
+            background: url(../../../resources/images/pattern/common/sec-card_seminar.jpg) no-repeat center / cover;
             &::after {
               content: '';
               display: block;
@@ -1155,8 +1150,7 @@
               color: $white;
             }
             &:hover {
-              background: url(../../../resources/images/pattern/common/스크린샷\ 2024-11-01\ 오전\ 11.54.36.png)
-                no-repeat center / cover;
+              background: url(../../../resources/images/pattern/common/sec-card_archive.png) no-repeat center / cover;
             }
           }
         }
@@ -1182,7 +1176,7 @@
               font-weight: 500;
             }
             &:hover {
-              background: url(../../../resources/images/pattern/common/sec-card_archive02.jpg) no-repeat center / cover;
+              background: url(../../../resources/images/pattern/common/sec-card_gallery.jpg) no-repeat center / cover;
             }
           }
         }
@@ -1206,7 +1200,7 @@
               font-weight: 500;
             }
             &:hover {
-              background: url(../../../resources/images/pattern/common/sec-card_archive03.jpg) no-repeat center / cover;
+              background: url(../../../resources/images/pattern/common/sec-card_seminar.jpg) no-repeat center / cover;
               .category,
               .title {
                 color: $white;
