--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -66,7 +66,7 @@
       display: block;
       width: 123px;
       height: 26px;
-      background: url(../../images/pattern/common/kiafseoul_header_logo.png) no-repeat 0 0 / contain;
+      background: url(/resources/images/pattern/common/kiafseoul_header_logo.png) no-repeat 0 0 / contain;
     }
   }
   .util {
