intro 비디오 수정

--- a/resources/scss/component/_reset.scss
+++ b/resources/scss/component/_reset.scss
@@ -136,6 +136,7 @@ body {
   font-family: $font-family-base;
   color: $font-color-base;
   font-weight: $font-weight-base;
+  overflow-x: hidden;
 }
 
 a {
