--- a/resources/scss/component/_variables.scss
+++ b/resources/scss/component/_variables.scss
@@ -79,3 +79,7 @@ $ftH: 70px;
 $breakpoint-sm: 600px !default;
 $breakpoint-md: 1024px !default;
 $breakpoint-lg: 1920px !default;
+
+//sec-card padding
+$card-padding-sm: 16px;
+$card-padding-lg: 24px;
