--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -48,6 +48,7 @@
 
 // header
 #header {
+  //background-color: lightblue;
   background-color: $white;
   //position: relative;
   position: fixed;
