--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -610,6 +610,7 @@
             margin-top: 8px;
           }
           .card__item {
+            transition: all 0.6s ease;
             &::after {
               display: block;
               content: '';
@@ -651,10 +652,11 @@
             }
             .top-box {
               position: relative;
-              padding: 50px 24px 24px;
+              padding: 40px 24px 24px;
               display: flex;
               justify-content: space-between;
               align-items: center;
+              transition: all 0.3s;
               .left-box {
                 display: flex;
                 flex-direction: column;
@@ -673,7 +675,7 @@
         }
         .gallery {
           //overflow: hidden;
-          height: calc(632px * 2 / 3);
+          height: calc(100% * 2 / 3);
           width: 100%;
           position: absolute;
           bottom: 0;
@@ -694,10 +696,11 @@
             }
             .top-box {
               position: relative;
-              padding: 50px 24px 24px;
+              padding: 40px 24px 24px;
               display: flex;
               justify-content: space-between;
               align-items: center;
+              transition: all 0.3s;
               .left-box {
                 display: flex;
                 flex-direction: column;
@@ -724,7 +727,7 @@
               color: $white;
             }
           }
-          height: calc(632px * 1 / 3);
+          height: calc(100% * 1 / 3);
           width: 100%;
           position: absolute;
           bottom: 0;
@@ -744,10 +747,11 @@
             }
             .top-box {
               position: relative;
-              padding: 50px 24px 24px;
+              padding: 44px 24px 24px;
               display: flex;
               justify-content: space-between;
               align-items: center;
+              transition: all 0.3s;
               .left-box {
                 display: flex;
                 flex-direction: column;
